[package]
authors = ["Misitebao <i@misitebao.com>"]
description = "Hi, I am Misitebao"
edition = "2021"
keywords = ["misitebao"]
license = "MIT"
name = "misitebao"
readme = "README.md"
repository = "https://github.com/misitebao/misitebao"
version = "1.0.3"

[[bin]]
name = "misitebao"
path = "src/main.rs"

[[bin]]
name = "misi"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "3"
